* bulk changes